<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.onboarding.ForgotPasswordFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/navigation_bar"
        android:layout_width="match_parent"
        android:paddingTop="@dimen/padding16"
        android:layout_height="@dimen/height64"
        android:layout_marginTop="@dimen/margin64" />

    <TextView
        android:id="@+id/forgot_password_description"
        style="@style/Title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_description"
        android:layout_marginTop="@dimen/margin69"
        android:textAlignment="center"
        android:layout_marginHorizontal="@dimen/margin16"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        style="@style/TextLayoutInput"
        android:layout_marginHorizontal="16dp"
        android:background="@null"
        android:hint="@string/placeholder_email"
        app:boxStrokeWidth="0dp"
        android:layout_marginTop="@dimen/margin46"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_entry"
            style="@style/EditTextStyle"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_continue"
        style="@style/ButtonLarge"
        tools:text="@string/signup"
        android:layout_marginTop="@dimen/margin27"
        android:layout_marginHorizontal="@dimen/margin16"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>