<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding.VerificationFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/navigation_bar"
        android:layout_width="match_parent"
        android:paddingTop="@dimen/padding16"
        android:layout_height="@dimen/height64"
        android:layout_marginTop="@dimen/margin64" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/verification_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_code"
        android:textSize="@dimen/textSize36"
        android:layout_marginHorizontal="@dimen/textSize16"
        android:fontFamily="@font/inter_500_medium"
        android:textColor="@color/dark_100"
        android:layout_marginBottom="@dimen/margin53"
        app:layout_constraintBottom_toTopOf="@+id/pin_entry_edit"
        app:layout_constraintStart_toStartOf="parent"
        />



    <com.app.montra.helper.PinEntryEditText
        android:id="@+id/pin_entry_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cursorVisible="true"
        android:digits="1234567890"
        android:focusable="true"
        android:inputType="number|numberPassword"
        android:maxLength="4"
        android:textAlignment="textStart"
        android:layout_marginBottom="@dimen/margin56"
        android:textColor="@color/light_80"
        android:textIsSelectable="false"
        android:textSize="16sp"
        android:layout_marginStart="@dimen/margin16"
        app:layout_goneMarginStart="@dimen/margin16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/conde_sent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_timer"
        android:textColor="@color/violet_100"
        android:textSize="@dimen/textSize18"
        android:layout_marginHorizontal="@dimen/textSize16"
        android:fontFamily="@font/inter_600_semibold"
        android:layout_marginBottom="@dimen/margin16"
        app:layout_constraintBottom_toTopOf="@+id/conde_sent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/conde_sent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/code_sent"
        android:textSize="@dimen/textSize16"
        android:textColor="@color/dark_25"
        android:fontFamily="@font/inter_500_medium"
        android:textAlignment="viewStart"
        android:layout_marginHorizontal="@dimen/textSize16"
        android:layout_marginBottom="@dimen/margin16"
        app:layout_constraintBottom_toTopOf="@+id/resend_code"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/resend_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resend_code"
        android:fontFamily="@font/inter_500_medium"
        android:textColor="@color/violet_100"
        android:textSize="@dimen/textSize16"
        android:layout_marginBottom="@dimen/margin46"
        app:layout_constraintBottom_toTopOf="@+id/btn_verify"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <include
        android:id="@+id/btn_verify"
        android:layout_marginHorizontal="@dimen/textSize16"
        layout="@layout/btn_large_purple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin32"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>